# pypack_makeastar

./: .gitignore  CONTRIBUTING.md  CONTRIBUTING_ko.md  Dockerfile  GITHUB_DESCRIPTION.md  LICENSE  README.md  README_ko.md  new_demo.py  pyproject.toml  star_pattern.py
.github/workflows/: deploy.yml  tests.yml
docs/: chat.md  implementation_plan.md  task.md  walkthrough.md
src/star/: __init__.py
tests/: test_star.py
