[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "makeastar"
version = "0.2.0"
description = "Minimalist star pattern generator using optimized one-liners."
authors = [{name = "Rheehose", email = "rheehose@example.com"}]
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
where = ["src"]
